   These are some of the changes that have occured in CGIWrap from
   version to version.
     _________________________________________________________________
   
  New since version 3.6.3:
  
     Fixed netmask comparison
   
     Added anonymous CVS server info
   
     Updates from David Hollenberg for misc. error checking/handling and
   overflow protection.
   
  New in version 3.6.3:
  
     * Added support for checking if user has a valid shell, similar to
       what ftpd does. The BSD licensed getusershell.o has been included
       for support where needed.
     * Bug fix for SEGV condition when certain syntax is used for the
       request. It did not appear exploitable, but would cause cgiwrap to
       core as root. Thanks to Michael Bryan (michael@blueneptune.com)
       for the fix.
       
  New in version 3.6.2:
  
     * Fixed the !logfd check. Thanks to Alexander Wolgast for pointing
       this out.
     * Added support for reporting rusage/return code after executing
       script.
     * Changed logging to use close-on-exec flag of file descriptor, so
       it can be left open for reporting rusage if enabled.
     * Added support for reporting approximate elapsed execution time of
       a cgi script.
       
  New in version 3.6.1:
  
     * Fixed the UserInFile routine. It broke cause I forgot to remove
       newlines.
       
  New in version 3.6:
  
     * Removed check for ./ in the path of the script. The check for ../
       is still there. There doesn't seem to be any need for this check
       as it appears to be harmless. It is being removed to allow for
       users with "./" in their home dir (for chrooting with wuftpd) to
       be able to use cgiwrap.
     * Added code to optionally prevent script execution if the script is
       group or world writable. I cannot make the check for world
       writable forced on, since on my site using AFS, the permission
       bits aren't used, and some scripts might be marked as world